--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -157,3 +157,16 @@
 input {
     outline: none;
 }
+
+.full_section {
+	width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.box_center {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
